Translate 2021-07-29-quarkus-2-1-0-final-released.adoc.po

--- a/l10n/po/ja_JP/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc.po
@@ -3,28 +3,29 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-07-29 19:08+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-07-30 18:06+0900\n"
+"Language: ja_JP\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.1.0.Final released - Dev Service for Keycloak, Reactive SQL Server extension, Kotlin 1.5'\n"
@@ -35,155 +36,139 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'Quarkus 2.1.0.Finalリリース - KeycloakのDev Service、Reactive SQL Server extension、Kotlin 1.5'\n"
+"title: 'Quarkus 2.1.0.Finalリリース - Dev Service for Keycloak、Reactive SQL Serverエクステンション、Kotlin 1.5'\n"
 "date: 2021-07-29\n"
 "tags: release\n"
-"synopsis: 「2.0の肩に加えて、2.1では多くの改良と改善があちこちに盛り込まれています」。\n"
+"synopsis: '2.0の肩の上に、2.1では多くの改良と改善があちこちに盛り込まれています' \n"
 "author: gsmet\n"
 "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:11
-#, fuzzy
 msgid "Today, we release Quarkus 2.1.0.Final which includes a lot of refinements and improvements and a couple of new features:"
 msgstr "本日、Quarkus 2.1.0.Finalをリリースしました。多くの改良と改善、いくつかの新機能が含まれています。"
 
 #. type: Title ===
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:13
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:22
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Dev Service for Keycloak"
-msgstr "Keycloakの開発サービス"
+msgstr "Dev Service for Keycloak"
 
 #. type: Title ===
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:14
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:28
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Reactive Microsoft SQL Server extension"
-msgstr "リアクティブなMicrosoft SQL Serverの拡張機能"
+msgstr "リアクティブなMicrosoft SQL Serverエクステンション"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:15
-#, fuzzy
 msgid "Upgrade to Kotlin 1.5"
 msgstr "Kotlin 1.5へのアップグレード"
 
 #. type: Title ==
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:16
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Migration Guide"
 msgstr "マイグレーションガイド"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:19
-#, fuzzy
 msgid "To migrate from 2.0, please refer to https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.1[our migration guide]."
 msgstr "2.0からの移行は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.1[移行ガイド]をご参照ください。"
 
 #. type: Title ==
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:20
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "What's new?"
-msgstr "最新情報は？"
+msgstr "変更点"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:25
-#, fuzzy
 msgid "Dev Services start the required containers automatically when you are developing or testing your application."
 msgstr "Dev Servicesは、アプリケーションの開発やテストを行う際に、必要なコンテナを自動的に起動します。"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:27
-#, fuzzy
 msgid "A lot of Quarkus extensions are already covered and, in 2.1, we added link:/guides/security-openid-connect-dev-services[a Dev Service for Keycloak]."
-msgstr "多くのQuarkusの拡張機能はすでにカバーされており、2.1では link:/guides/security-openid-connect-dev-services[KeycloakのDev Service]を追加しました。"
+msgstr "多くのQuarkusのエクステンションがすでにカバーされており、2.1では link:/guides/security-openid-connect-dev-services[Dev Service for Keycloak]を追加しました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:31
-#, fuzzy
 msgid "2.1 adds a reactive driver extension for Microsoft SQL Server - `quarkus-reactive-mssql-client`."
 msgstr "2.1では、Microsoft SQL Serverのリアクティブ・ドライバー・エクステンションが追加されています - `quarkus-reactive-mssql-client` 。"
 
 #. type: Title ===
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:32
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Kotlin 1.5"
 msgstr "Kotlin 1.5"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:35
-#, fuzzy
 msgid "We upgraded our Kotlin extension and tooling to 1.5, namely 1.5.21."
-msgstr "Kotlinの拡張機能とツールを1.5にアップグレードしました（1.5.21）。"
+msgstr "Kotlinエクステンションとツールを1.5にアップグレードしました（1.5.21）。"
 
 #. type: Title ===
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:36
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Full Changelog"
-msgstr "フルチェンジログ"
+msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:39
-#, fuzzy
 msgid "You can get the full changelogs of https://github.com/quarkusio/quarkus/releases/tag/2.1.0.CR1[2.1.0.CR1] and https://github.com/quarkusio/quarkus/releases/tag/2.1.0.Final[2.1.0.Final] on GitHub."
 msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.1.0.CR1[2.1.0.CR1]および link:https://github.com/quarkusio/quarkus/releases/tag/2.1.0.Final[2.1.0.Final]の完全な変更履歴はGitHubでご覧いただけます。"
 
 #. type: Title ==
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:40
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Contributors"
-msgstr "貢献者"
+msgstr "コントリビューター"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:44
-#, fuzzy
 msgid "The Quarkus community is growing and has now https://github.com/quarkusio/quarkus/graphs/contributors[511 contributors].  Many many thanks to each and everyone of them."
-msgstr "Quarkusコミュニティは成長を続けており、現在 link:https://github.com/quarkusio/quarkus/graphs/contributors[511名の方にご協力いただい]ています。それぞれの方に感謝します。"
+msgstr "Quarkus コミュニティは成長しており、現在 link:https://github.com/quarkusio/quarkus/graphs/contributors[378人のコントリビューター] がいます。一人一人に多くの感謝の意を表します。"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:46
-#, fuzzy
 msgid "In particular for the 2.1 release, thanks to Alexey Loubyansky, Amos Feng, André Gonçalves, Andy Damevin, Andy Fedotov, antoniodvr, axblu, Bernhard Lutzmann, Bill Burke, Bobby Alex Philip, Bryan Varner, chetankokil, Chris Laprun, Christian Morin, Christopher, Clement Escoffier, Cyrille Le Clerc, Dan Heidinga, Davide, Dirk Van Haerenborgh, Dominika Vagnerova, Eric Deandrea, Erin Schnabel, essobedo, Falko Modler, Foivos Zakkak, GavinRay97, George Gastaldi, Georgios Andrianakis, Guillaume Le Floch, Guillaume Smet, Gustavo Luszczynski, Gytis Trikleris, Heiko W. Rupp, Ilya Leoshkevich, Ioannis Canellos, Ivan Greguric Ortolan, James R. Perkins, Jan Martiška, Janez Pintar, JiriOndrusek, Jose, Joshua Roys, Julien Ponge, Justin Lee, Katia Aresti, Kay Ulbrich, Ken Finnigan, Kjetil Nygård, Knut Wannheden, Kyrylo Shpak, Ladislav Thon, Leonardo, Loïc Mathieu, luneo7, Maciej Swiderski, Maciej Walkowiak, manusa, Manyanda Chitimbo, Marc Nuri, Marcel Hanser, Marco Bungart, Martin Kouba, Martin Panzer, Matej Novotny, Michał Szynkiewicz, Mingyuan Wu, Nicolas Filotto, Ozan Gunalp, Patryk Najda, Paul Carter-Brown, Paul Robinson, Phillip Krüger, Renato Pereira Back, Roberto Cortez, Ron Sigal, Rostislav Svoboda, Sanne Grinovero, Sebastien Dionne, Sergey Beryozkin, Stephane Epardaud, Stuart Douglas, Sven Kattelans, Thomas Segismont, Tomas Hofman, xstefank and Yoann Rodière."
-msgstr "特に、2.Alexey Loubyansky, Amos Feng, André Gonçalves, Andy Damevin, Andy Fedotov, antoniodvr, axblu, Bernhard Lutzmann, Bill Burke, Bobby Alex Philip, Bryan Varner, chetankokil, Chris Laprun, Christian Morin, Christopher, Clement Escoffier, Cyrille Le Clerc., Dan Heidinga, Davide, Dirk Van Haerenborgh, Dominika Vagnerova, Eric Deandrea, Erin Schnabel, essobedo, Falko Modler,Dan Heidinga, Davide, Dirk Van Haerenborgh, Dominika Vagnerova, Eric Deandrea, Erin Schnabel, essobedo, Falko Modler, Foivos Zakkak, GavinRay97, George Gastaldi, Georgios Andrianakis, Guillaume Le Floch, Guillaume Smet, Gustavo Luszczynski, Gytis Trikleris, Heiko W.Rupp, Ilya Leoshkevich, Ioannis Canellos, Ivan Greguric Ortolan, James R.Perkins, Jan Martiška, Janez Pintar, JiriOndrusek, Jose, Joshua Roys, Julien Ponge, Justin Lee, Katia Aresti, Kay Ulbrich, Ken Finnigan, Kjetil Nygård, Knut Wannheden, Kyrylo Shpak,Ladislav Thon, Leonardo, Loïc Mathieu, luneo7, Maciej Swiderski, Maciej Walkowiak, manusa, Manyanda Chitimbo, Marc Nuri, Marcel Hanser, Marco Bungart, Martin Kouba, Martin Panzer,マテイ・ノボトニー、ミハウ・スィンキェヴィッチ、ミンユアン・ウー、ニコラ・フィロット、オザン・グナルプ、パトリック・ナジャ、ポール・カーター・ブラウン、ポール・ロビンソン、フィリップ・クリューガー、レナト・ペレイラ・バック、ロベルト・コルテス、ロン・シガール。Rostislav Svoboda, Sanne Grinovero, Sebastien Dionne, Sergey Beryozkin, Stephane Epardaud, Stuart Douglas, Sven Kattelans, Thomas Segismont, Tomas Hofman, xstefank, Yoann Rodière."
+msgstr "2.1リリースでは特に、次の方々に感謝いたします : Alexey Loubyansky, Amos Feng, André Gonçalves, Andy Damevin, Andy Fedotov, antoniodvr, axblu, Bernhard Lutzmann, Bill Burke, Bobby Alex Philip, Bryan Varner, chetankokil, Chris Laprun, Christian Morin, Christopher, Clement Escoffier, Cyrille Le Clerc, Dan Heidinga, Davide, Dirk Van Haerenborgh, Dominika Vagnerova, Eric Deandrea, Erin Schnabel, essobedo, Falko Modler, Foivos Zakkak, GavinRay97, George Gastaldi, Georgios Andrianakis, Guillaume Le Floch, Guillaume Smet, Gustavo Luszczynski, Gytis Trikleris, Heiko W. Rupp, Ilya Leoshkevich, Ioannis Canellos, Ivan Greguric Ortolan, James R. Perkins, Jan Martiška, Janez Pintar, JiriOndrusek, Jose, Joshua Roys, Julien Ponge, Justin Lee, Katia Aresti, Kay Ulbrich, Ken Finnigan, Kjetil Nygård, Knut Wannheden, Kyrylo Shpak, Ladislav Thon, Leonardo, Loïc Mathieu, luneo7, Maciej Swiderski, Maciej Walkowiak, manusa, Manyanda Chitimbo, Marc Nuri, Marcel Hanser, Marco Bungart, Martin Kouba, Martin Panzer, Matej Novotny, Michał Szynkiewicz, Mingyuan Wu, Nicolas Filotto, Ozan Gunalp, Patryk Najda, Paul Carter-Brown, Paul Robinson, Phillip Krüger, Renato Pereira Back, Roberto Cortez, Ron Sigal, Rostislav Svoboda, Sanne Grinovero, Sebastien Dionne, Sergey Beryozkin, Stephane Epardaud, Stuart Douglas, Sven Kattelans, Thomas Segismont, Tomas Hofman, xstefank and Yoann Rodière."
 
 #. type: Title ==
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:47
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Come Join Us"
-msgstr "私たちと一緒に働きませんか？"
+msgstr "参加のお誘い"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:50
-#, fuzzy
 msgid "We value your feedback a lot so please report bugs, ask for improvements... Let's build something great together!"
 msgstr "皆様からのフィードバックを大切にしていますので、バグを報告したり、改善を求めたりしてください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:52
-#, fuzzy
 msgid "If you are a Quarkus user or just curious, don't be shy and join our welcoming community:"
-msgstr "Quarkusをお使いの方、または興味のある方は、恥ずかしがらずに私たちの歓迎するコミュニティに参加してください。"
+msgstr "Quarkusユーザーの場合でも、単に興味を持っているだけの場合でも、恥ずかしがらずにコミュニティに参加して下さい!:"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:54
-#, fuzzy
 msgid "provide feedback on https://github.com/quarkusio/quarkus/issues[GitHub];"
-msgstr "は、 link:https://github.com/quarkusio/quarkus/issues[GitHub]でフィードバックを行っています。"
+msgstr "https://github.com/quarkusio/quarkus/issues[GitHub] でフィードバック"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:55
-#, fuzzy
 msgid "craft some code and https://github.com/quarkusio/quarkus/pulls[push a PR];"
-msgstr "コードを作って link:https://github.com/quarkusio/quarkus/pulls[PRをし]てください。"
+msgstr "コードを作成し、 https://github.com/quarkusio/quarkus/pulls[プルリクエスト] を送信"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:56
-#, fuzzy
 msgid "discuss with us on https://quarkusio.zulipchat.com/[Zulip] and on the https://groups.google.com/d/forum/quarkus-dev[mailing list];"
-msgstr "link:https://quarkusio.zulipchat.com/[Zulip]や link:https://groups.google.com/d/forum/quarkus-dev[メーリングリスト]で議論することができます。"
+msgstr "https://quarkusio.zulipchat.com/[Zulip] や https://groups.google.com/d/forum/quarkus-dev[メーリングリスト] でディスカッションに参加"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc:56
-#, fuzzy
 msgid "ask your questions on https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]."
-msgstr "link:https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]で質問をしてみましょう。"
+msgstr "https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow] で質問"
