Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/config-mappings.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/config-mappings.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-16 02:21+0000\n"
+"POT-Creation-Date: 2021-08-03 02:25+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -816,7 +816,7 @@ msgstr ""
 msgid ""
 "@QuarkusTest\n"
 "class ServerMockTest {\n"
-"    @InjectMock\n"
+"    @Inject\n"
 "    Server server;\n"
 msgstr ""
 
@@ -886,7 +886,7 @@ msgstr ""
 msgid ""
 "    @Produces\n"
 "    @ApplicationScoped\n"
-"    @Mock\n"
+"    @io.quarkus.test.Mock\n"
 "    AppConfig appConfig() {\n"
 "        AppConfig appConfig = config.unwrap(SmallRyeConfig.class).getConfigMapping(AppConfig.class);\n"
 "        AppConfig appConfigSpy = Mockito.spy(appConfig);\n"
@@ -908,7 +908,7 @@ msgstr ""
 msgid ""
 "@QuarkusTest\n"
 "class AppConfigTest {\n"
-"    @InjectMock\n"
+"    @Inject\n"
 "    AppConfig appConfig;\n"
 msgstr ""
 
