Update .po files

--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-oidc-common-config-group-oidc-common-config-tls.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-oidc-common-config-group-oidc-common-config-tls.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-03-03 20:14+0000\n"
+"POT-Creation-Date: 2021-08-04 13:13+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -53,13 +53,65 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-oidc-common-config-group-oidc-common-config-tls.adoc:17
-#: upstream/_generated-config/latest/config/quarkus-oidc-common-config-group-oidc-common-config-tls.adoc:26
+#: upstream/_generated-config/latest/config/quarkus-oidc-common-config-group-oidc-common-config-tls.adoc:53
 #, no-wrap
-msgid "`required`, `none`"
+msgid "`required`, `certificate-validation`, `none`"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-oidc-common-config-group-oidc-common-config-tls.adoc:25
+#, no-wrap
+msgid ""
+"[[quarkus-oidc-common-config-group-oidc-common-config-tls_quarkus.oidc-client.tls.trust-store-file]]`link:#quarkus-oidc-common-config-group-oidc-common-config-tls_quarkus.oidc-client.tls.trust-store-file[quarkus.oidc-client.tls.trust-store-file]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"An optional trust store which holds the certificate information of the certificates to trust\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-oidc-common-config-group-oidc-common-config-tls.adoc:26
+#: upstream/_generated-config/latest/config/quarkus-oidc-common-config-group-oidc-common-config-tls.adoc:62
+#, no-wrap
+msgid "path"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-oidc-common-config-group-oidc-common-config-tls.adoc:34
+#, no-wrap
+msgid ""
+"[[quarkus-oidc-common-config-group-oidc-common-config-tls_quarkus.oidc-client.tls.trust-store-password]]`link:#quarkus-oidc-common-config-group-oidc-common-config-tls_quarkus.oidc-client.tls.trust-store-password[quarkus.oidc-client.tls.trust-store-password]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"A parameter to specify the password of the trust store file.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-oidc-common-config-group-oidc-common-config-tls.adoc:35
+#: upstream/_generated-config/latest/config/quarkus-oidc-common-config-group-oidc-common-config-tls.adoc:44
+#: upstream/_generated-config/latest/config/quarkus-oidc-common-config-group-oidc-common-config-tls.adoc:71
+#: upstream/_generated-config/latest/config/quarkus-oidc-common-config-group-oidc-common-config-tls.adoc:80
+#, no-wrap
+msgid "string"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-oidc-common-config-group-oidc-common-config-tls.adoc:43
+#, no-wrap
+msgid ""
+"[[quarkus-oidc-common-config-group-oidc-common-config-tls_quarkus.oidc-client.tls.trust-store-cert-alias]]`link:#quarkus-oidc-common-config-group-oidc-common-config-tls_quarkus.oidc-client.tls.trust-store-cert-alias[quarkus.oidc-client.tls.trust-store-cert-alias]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"A parameter to specify the alias of the trust store certificate.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-oidc-common-config-group-oidc-common-config-tls.adoc:52
 #, no-wrap
 msgid ""
 "[[quarkus-oidc-common-config-group-oidc-common-config-tls_quarkus.oidc-client.-id-.tls.verification]]`link:#quarkus-oidc-common-config-group-oidc-common-config-tls_quarkus.oidc-client.-id-.tls.verification[quarkus.oidc-client.\"id\".tls.verification]`\n"
@@ -67,5 +119,41 @@ msgid ""
 "[.description]\n"
 "--\n"
 "Certificate validation and hostname verification, which can be one of the following values from enum `Verification`. Default is required.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-oidc-common-config-group-oidc-common-config-tls.adoc:61
+#, no-wrap
+msgid ""
+"[[quarkus-oidc-common-config-group-oidc-common-config-tls_quarkus.oidc-client.-id-.tls.trust-store-file]]`link:#quarkus-oidc-common-config-group-oidc-common-config-tls_quarkus.oidc-client.-id-.tls.trust-store-file[quarkus.oidc-client.\"id\".tls.trust-store-file]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"An optional trust store which holds the certificate information of the certificates to trust\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-oidc-common-config-group-oidc-common-config-tls.adoc:70
+#, no-wrap
+msgid ""
+"[[quarkus-oidc-common-config-group-oidc-common-config-tls_quarkus.oidc-client.-id-.tls.trust-store-password]]`link:#quarkus-oidc-common-config-group-oidc-common-config-tls_quarkus.oidc-client.-id-.tls.trust-store-password[quarkus.oidc-client.\"id\".tls.trust-store-password]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"A parameter to specify the password of the trust store file.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-oidc-common-config-group-oidc-common-config-tls.adoc:79
+#, no-wrap
+msgid ""
+"[[quarkus-oidc-common-config-group-oidc-common-config-tls_quarkus.oidc-client.-id-.tls.trust-store-cert-alias]]`link:#quarkus-oidc-common-config-group-oidc-common-config-tls_quarkus.oidc-client.-id-.tls.trust-store-cert-alias[quarkus.oidc-client.\"id\".tls.trust-store-cert-alias]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"A parameter to specify the alias of the trust store certificate.\n"
 "--"
 msgstr ""
