--- a/l10n/po/ja_JP/_guides/amazon-lambda.adoc.po
+++ b/l10n/po/ja_JP/_guides/amazon-lambda.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-06-30 15:11+0000\n"
+"POT-Creation-Date: 2021-08-04 13:18+0000\n"
 "PO-Revision-Date: 2021-03-07 06:11+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
@@ -595,7 +595,7 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/amazon-lambda.adoc:326
 #, no-wrap
-msgid "    testimplementation  \"io.quarkus:quarkus-test-amazon-lambda\"\n"
+msgid "    testImplementation  \"io.quarkus:quarkus-test-amazon-lambda\"\n"
 msgstr ""
 
 #. type: delimited block -
