--- a/l10n/po/ja_JP/_guides/consul-config.adoc.po
+++ b/l10n/po/ja_JP/_guides/consul-config.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-06-30 15:11+0000\n"
+"POT-Creation-Date: 2021-08-04 13:18+0000\n"
 "PO-Revision-Date: 2021-04-09 20:30+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -200,7 +200,7 @@ msgstr ""
 #: upstream/_guides/consul-config.adoc:120
 #, no-wrap
 msgid ""
-"@Path(\"/hello\")\n"
+"@Path(\"/greeting\")\n"
 "public class GreetingResource {\n"
 msgstr ""
 
@@ -237,7 +237,7 @@ msgstr ""
 #: upstream/_guides/consul-config.adoc:123
 #, no-wrap
 msgid ""
-"    @ConfigProperty(name = \"message\", defaultValue=\"Hello from default\")\n"
+"    @ConfigProperty(name = \"greeting.message\", defaultValue=\"Hello from default\")\n"
 "    String message;\n"
 msgstr ""
 
