--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-micrometer.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-micrometer.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-30 15:08+0000\n"
+"POT-Creation-Date: 2021-08-04 13:13+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -74,8 +74,6 @@ msgstr "boolean"
 #: upstream/_generated-config/latest/config/quarkus-micrometer.adoc:21
 #: upstream/_generated-config/latest/config/quarkus-micrometer.adoc:31
 #: upstream/_generated-config/latest/config/quarkus-micrometer.adoc:41
-#: upstream/_generated-config/latest/config/quarkus-micrometer.adoc:71
-#: upstream/_generated-config/latest/config/quarkus-micrometer.adoc:115
 #: upstream/_generated-config/latest/config/quarkus-micrometer.adoc:191
 #, no-wrap
 msgid "`true`"
@@ -142,7 +140,7 @@ msgid ""
 "[.description]\n"
 "--\n"
 "Micrometer JVM metrics support. \n"
-" Micrometer JVM metrics support is enabled by default.\n"
+" Support for JVM metrics will be enabled if Micrometer support is enabled, and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.\n"
 "--"
 msgstr ""
 
@@ -195,7 +193,7 @@ msgid ""
 "[.description]\n"
 "--\n"
 "Micrometer System metrics support. \n"
-" Micrometer System metrics support is enabled by default.\n"
+" Support for System metrics will be enabled if Micrometer support is enabled, and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.\n"
 "--"
 msgstr ""
 
