Add machine translation

--- a/l10n/po/ja_JP/_guides/kogito.adoc.po
+++ b/l10n/po/ja_JP/_guides/kogito.adoc.po
@@ -114,13 +114,15 @@ msgstr "モデラーのインストールを避けるために、 link:https://b
 
 #. type: Plain text
 #: upstream/_guides/kogito.adoc:41
+#, fuzzy
 msgid "Other platforms"
-msgstr ""
+msgstr "その他のプラットフォーム"
 
 #. type: Plain text
 #: upstream/_guides/kogito.adoc:43
+#, fuzzy
 msgid "You can reference to https://kiegroup.github.io/kogito-online/#/download[Business Modeler Hub] to download the latest platforms supported for the https://github.com/kiegroup/kogito-tooling/releases[Kogito tooling releases]."
-msgstr ""
+msgstr "link:https://kiegroup.github.io/kogito-online/#/download[Business Modeler Hub]を参照して、 link:https://github.com/kiegroup/kogito-tooling/releases[Kogito toolingリリース]でサポートされている最新のプラットフォームをダウンロードすることができます。"
 
 #. type: Plain text
 #: upstream/_guides/kogito.adoc:45
