--- a/l10n/po/ja_JP/_guides/kogito-pmml.adoc.po
+++ b/l10n/po/ja_JP/_guides/kogito-pmml.adoc.po
@@ -21,130 +21,147 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/kogito-pmml.adoc:6
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Using Kogito to add prediction capabilities to an application"
-msgstr ""
+msgstr "アプリケーションに予測機能を追加するためのKogitoの使い方"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:12
+#, fuzzy
 msgid "This guide demonstrates how your Quarkus application can use Kogito to add business automation to power it up with predictions."
-msgstr ""
+msgstr "このガイドでは、QuarkusアプリケーションにKogitoを使用してビジネスオートメーションを追加し、予測機能を強化する方法を説明します。"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:17
+#, fuzzy
 msgid "Kogito is a next generation business automation toolkit that originates from the well known Open Source project Drools (for predictions). Kogito aims at providing another approach to business automation where the main message is to expose your business knowledge (processes, rules, decisions, predictions)  in a domain specific way."
-msgstr ""
+msgstr "Kogitoは、よく知られたオープンソース・プロジェクトであるDrools（予測のための）から生まれた、次世代のビジネス・オートメーション・ツールキットです。Kogitoは、ビジネス・オートメーションに別のアプローチを提供することを目的としており、主なメッセージは、ビジネス・ナレッジ（プロセス、ルール、決定、予測）をドメイン固有の方法で公開することです。"
 
 #. type: Title ==
 #: upstream/_guides/kogito-pmml.adoc:19
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Prerequisites"
-msgstr ""
+msgstr "前提条件"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:22
+#, fuzzy
 msgid "To complete this guide, you need:"
-msgstr ""
+msgstr "このガイドを完成させるためには"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:24
+#, fuzzy
 msgid "less than 15 minutes"
-msgstr ""
+msgstr "15分未満"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:25
+#, fuzzy
 msgid "an IDE"
-msgstr ""
+msgstr "a IDE"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:26
+#, fuzzy
 msgid "JDK 11+ installed with `JAVA_HOME` configured appropriately"
-msgstr ""
+msgstr "JDK 11+をインストールし、 `JAVA_HOME` を適切に設定する。"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:27
+#, fuzzy
 msgid "Apache Maven {maven-version}"
-msgstr ""
+msgstr "Apache Maven {maven-version}。"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:28
+#, fuzzy
 msgid "Docker"
-msgstr ""
+msgstr "ドッカー"
 
 #. type: Title ==
 #: upstream/_guides/kogito-pmml.adoc:29
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Architecture"
-msgstr ""
+msgstr "建築"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:32
+#, fuzzy
 msgid "In this example, we build a very simple microservice which offers one REST endpoint:"
-msgstr ""
+msgstr "この例では、1つのRESTエンドポイントを提供する非常にシンプルなマイクロサービスを構築します。"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:34
+#, fuzzy
 msgid "`/LogisticRegressionIrisData`"
-msgstr ""
+msgstr "`/LogisticRegressionIrisData`"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:37
+#, fuzzy
 msgid "This endpoint will be automatically generated based on given PMML file, that in turn will make use of generated code to make certain predictions based on the data being processed."
-msgstr ""
+msgstr "このエンドポイントは、与えられたPMMLファイルに基づいて自動的に生成され、生成されたコードを使用して、処理されるデータに基づいて特定の予測を行います。"
 
 #. type: Title ===
 #: upstream/_guides/kogito-pmml.adoc:38
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "PMML file"
-msgstr ""
+msgstr "PMMLファイル"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:42
+#, fuzzy
 msgid "The PMML file describes the prediction logic of our microservice.  It should provide the actual model (Regression, Tree, Scorecard, Clustering, etc) needed to make the prediction."
-msgstr ""
+msgstr "PMMLファイルは、マイクロサービスの予測ロジックを記述しています。予測を行うために必要な実際のモデル（回帰、ツリー、スコアカード、クラスタリングなど）を提供する必要があります。"
 
 #. type: Title ===
 #: upstream/_guides/kogito-pmml.adoc:43
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Prediction endpoints"
-msgstr ""
+msgstr "予測エンドポイント"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:46
+#, fuzzy
 msgid "Those are the entry points to the service that can be consumed by clients."
-msgstr ""
+msgstr "これらは、クライアントが消費できるサービスへのエントリーポイントとなります。"
 
 #. type: Title ==
 #: upstream/_guides/kogito-pmml.adoc:47
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Solution"
-msgstr ""
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:51
+#, fuzzy
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the complete example."
-msgstr ""
+msgstr "次のセクションの指示に従って、段階的にアプリケーションを作成することをお勧めします。しかし、すぐに完全な例に進むこともできます。"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:53
+#, fuzzy
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
-msgstr ""
+msgstr "Gitリポジトリをクローンする： `git clone {quickstarts-clone-url}` 、または{quickstarts-archive-url}[archive]をダウンロードする。"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:55
+#, fuzzy
 msgid "The solution is located in the `kogito-pmml-quickstart` {quickstarts-tree-url}/kogito-pmml-quickstart[directory]."
-msgstr ""
+msgstr "このソリューションは `kogito-pmml-quickstart` {quickstarts-tree-url}/kogito-pmml-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/kogito-pmml.adoc:56
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Creating the Maven Project"
-msgstr ""
+msgstr "Mavenプロジェクトの作成"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:59
+#, fuzzy
 msgid "First, we need a new project. Create a new project with the following command:"
-msgstr ""
+msgstr "まず、新しいプロジェクトを用意します。以下のコマンドで新しいプロジェクトを作成します。"
 
 #. type: delimited block -
 #: upstream/_guides/kogito-pmml.adoc:68
@@ -160,13 +177,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:73
+#, fuzzy
 msgid "This command generates a Maven project, importing the `kogito` extension that comes with all needed dependencies and configuration to equip your application with business automation."
-msgstr ""
+msgstr "このコマンドはMavenプロジェクトを生成し、アプリケーションにビジネスオートメーションを装備するために必要なすべての依存関係と構成を備えた `kogito` エクステンションをインポートします。"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:76
+#, fuzzy
 msgid "If you already have your Quarkus project configured, you can add the `kogito` extension to your project by running the following command in your project base directory:"
-msgstr ""
+msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリで以下のコマンドを実行することで、 `kogito` エクステンションをプロジェクトに追加することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/kogito-pmml.adoc:80
@@ -176,8 +195,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:83
+#, fuzzy
 msgid "This will add the following to your `pom.xml`:"
-msgstr ""
+msgstr "これにより、 `pom.xml` に以下が追加されます。"
 
 #. type: delimited block -
 #: upstream/_guides/kogito-pmml.adoc:90
@@ -191,14 +211,15 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/kogito-pmml.adoc:92
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Writing the application"
-msgstr ""
+msgstr "アプリケーションの作成"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:96
+#, fuzzy
 msgid "Predictions are evaluated based on a PMML model, whose standard and specifications may be read http://dmg.org/pmml/v4-4-1/GeneralStructure.html[here].  Let's start by adding a simple PMML file: `LogisticRegressionIrisData.pmml`. It contains a _Regression_ model named `LogisticRegressionIrisData`, and it uses a regression function to predict plant species from sepal and petal dimensions:"
-msgstr ""
+msgstr "予測値はPMMLモデルに基づいて評価されます。PMMLモデルの規格と仕様は link:http://dmg.org/pmml/v4-4-1/GeneralStructure.html[こちら]をご覧ください。まず、簡単なPMMLファイル `LogisticRegressionIrisData.pmml` を追加してみましょう。このファイルには `LogisticRegressionIrisData` という名前の _回帰_モデルが含まれており、回帰関数を用いて sepal と petal の寸法から植物種を予測しています。"
 
 #. type: delimited block -
 #: upstream/_guides/kogito-pmml.adoc:145
@@ -254,46 +275,51 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:148
+#, fuzzy
 msgid "During project compilation, Kogito will read the file and generate the classes needed for the evaluation, together with a couple of REST endpoints."
-msgstr ""
+msgstr "プロジェクトのコンパイル中に、Kogitoはそのファイルを読み、評価に必要なクラスをいくつかのRESTエンドポイントとともに生成します。"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:151
+#, fuzzy
 msgid "To get started quickly copy the PMML file from the {quickstarts-tree-url}/kogito-pmml-quickstart/src/main/resources/LogisticRegressionIrisData.pmml[quickstart]."
-msgstr ""
+msgstr "すぐに始めるには、{quickstarts-tree-url}/kogito-pmml-quickstart/src/main/resources/LogisticRegressionIrisData.pmml[quickstart]からPMMLファイルをコピーします。"
 
 #. type: Title ==
 #: upstream/_guides/kogito-pmml.adoc:152
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Running and Using the Application"
-msgstr ""
+msgstr "アプリケーションの実行と使用"
 
 #. type: Title ===
 #: upstream/_guides/kogito-pmml.adoc:154
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Running in Developer Mode"
-msgstr ""
+msgstr "デベロッパーモードでの動作"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:157
+#, fuzzy
 msgid "To run the microservice in dev mode, use `./mvnw clean quarkus:dev`."
-msgstr ""
+msgstr "マイクロサービスをdevモードで実行するには、 `./mvnw clean quarkus:dev`."
 
 #. type: Title ===
 #: upstream/_guides/kogito-pmml.adoc:158
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Running in JVM Mode"
-msgstr ""
+msgstr "JVMモードでの動作"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:161
+#, fuzzy
 msgid "When you're done playing with dev mode you can run it as a standard Java application."
-msgstr ""
+msgstr "開発モードでの作業が終わったら、標準的なJavaアプリケーションとして実行することができます。"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:163
+#, fuzzy
 msgid "First compile it:"
-msgstr ""
+msgstr "まず、コンパイルします。"
 
 #. type: delimited block -
 #: upstream/_guides/kogito-pmml.adoc:167
@@ -303,8 +329,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:170
+#, fuzzy
 msgid "Then run it:"
-msgstr ""
+msgstr "そして、それを実行する。"
 
 #. type: delimited block -
 #: upstream/_guides/kogito-pmml.adoc:174
@@ -314,24 +341,27 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/kogito-pmml.adoc:176
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Running in Native Mode"
-msgstr ""
+msgstr "ネイティブモードでの動作"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:179
+#, fuzzy
 msgid "This same demo can be compiled into native code: no modifications required."
-msgstr ""
+msgstr "このデモと同じものをネイティブコードにコンパイルすることができ、修正は必要ありません。"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:183
+#, fuzzy
 msgid "This implies that you no longer need to install a JVM on your production environment, as the runtime technology is included in the produced binary, and optimized to run with minimal resource overhead."
-msgstr ""
+msgstr "これは、ランタイム技術が生成されたバイナリに含まれており、最小限のリソースオーバーヘッドで動作するように最適化されているため、本番環境にJVMをインストールする必要がないことを意味します。"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:186
+#, fuzzy
 msgid "Compilation will take a bit longer, so this step is disabled by default; let's build again by enabling the `native` profile:"
-msgstr ""
+msgstr "コンパイルには少し時間がかかるので、このステップはデフォルトでは無効になっています。 `native` プロファイルを有効にして再度ビルドしてみましょう。"
 
 #. type: delimited block -
 #: upstream/_guides/kogito-pmml.adoc:190
@@ -341,8 +371,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:193
+#, fuzzy
 msgid "After getting a cup of coffee, you'll be able to run this binary directly:"
-msgstr ""
+msgstr "コーヒーを一杯飲んだら、このバイナリを直接実行できるようになります。"
 
 #. type: delimited block -
 #: upstream/_guides/kogito-pmml.adoc:197
@@ -352,14 +383,15 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/kogito-pmml.adoc:199
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Testing the Application"
-msgstr ""
+msgstr "アプリケーションのテスト"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:203
+#, fuzzy
 msgid "To test your application, just send a request to the service with giving the person as JSON payload."
-msgstr ""
+msgstr "アプリケーションをテストするには、JSONのペイロードとして人物を指定してサービスにリクエストを送信します。"
 
 #. type: delimited block -
 #: upstream/_guides/kogito-pmml.adoc:210
@@ -373,8 +405,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:213
+#, fuzzy
 msgid "In the response, you should see the prediction, that should be _virginica_:"
-msgstr ""
+msgstr "レスポンスの中に、予測値が表示されているはずですが、それは _virginica_のはずです。"
 
 #. type: delimited block -
 #: upstream/_guides/kogito-pmml.adoc:219
@@ -387,8 +420,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:222
+#, fuzzy
 msgid "You can also invoke the _descriptive_ endpoint, that will provide also the _OutputField_ evaluated:"
-msgstr ""
+msgstr "また，評価された _OutputField_を提供する _Descriptive_エンドポイントを呼び出すこともできます．"
 
 #. type: delimited block -
 #: upstream/_guides/kogito-pmml.adoc:229
@@ -422,16 +456,18 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/kogito-pmml.adoc:249
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "References"
-msgstr ""
+msgstr "リファレンス"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:252
+#, fuzzy
 msgid "https://kogito.kie.org[Kogito Website]"
-msgstr ""
+msgstr "link:https://kogito.kie.org[小木戸ウェブサイト]"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:252
+#, fuzzy
 msgid "https://docs.jboss.org/kogito/release/latest/html_single[Kogito Documentation]"
-msgstr ""
+msgstr "link:https://docs.jboss.org/kogito/release/latest/html_single[コギト・ドキュメンテーション]"
