--- a/l10n/po/ja_JP/_guides/security-jwt.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-jwt.adoc.po
@@ -1558,9 +1558,9 @@ msgstr "smallrye.jwt.require.named-principa"
 
 #. type: Table
 #: upstream/_guides/security-jwt.adoc:685
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
 
 #. type: Table
 #: upstream/_guides/security-jwt.adoc:686
