Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/hibernate-orm-panache.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/hibernate-orm-panache.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-23 02:19+0000\n"
+"POT-Creation-Date: 2021-08-06 02:20+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1125,7 +1125,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "@Entity\n"
-"@NamedQuery(name = \"Person.getByName\", query = \"from Person where name = :name\")\n"
+"@NamedQuery(name = \"Person.getByName\", query = \"from Person where name = ?1\")\n"
 "public class Person extends PanacheEntity {\n"
 "    public String name;\n"
 "    public LocalDate birth;\n"
