Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-class-loading-configuration-class-loading-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-class-loading-configuration-class-loading-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-14 02:13+0000\n"
+"POT-Creation-Date: 2021-08-10 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -55,9 +55,10 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-class-loading-configuration-class-loading-config.adoc:19
-#: upstream/_generated-config/main/config/quarkus-class-loading-configuration-class-loading-config.adoc:32
-#, no-wrap
-msgid "string"
+#: upstream/_generated-config/main/config/quarkus-class-loading-configuration-class-loading-config.adoc:41
+#, fuzzy, no-wrap
+#| msgid "string"
+msgid "list of string"
 msgstr "string"
 
 #. type: Table
@@ -77,7 +78,25 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-class-loading-configuration-class-loading-config.adoc:44
+#: upstream/_generated-config/main/config/quarkus-class-loading-configuration-class-loading-config.adoc:32
+#, no-wrap
+msgid "string"
+msgstr "string"
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-class-loading-configuration-class-loading-config.adoc:40
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-class-loading-configuration-class-loading-config_quarkus.class-loading.removed-artifacts]]`link:#quarkus-class-loading-configuration-class-loading-config_quarkus.class-loading.removed-artifacts[quarkus.class-loading.removed-artifacts]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Artifacts that will never be loaded by the class loader, and will not be packed into the final application. This allows you to explicitly remove artifacts from your application even though they may be present on the class path.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-class-loading-configuration-class-loading-config.adoc:53
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-class-loading-configuration-class-loading-config_quarkus.class-loading.removed-resources-removed-resources]]`link:#quarkus-class-loading-configuration-class-loading-config_quarkus.class-loading.removed-resources-removed-resources[quarkus.class-loading.removed-resources]`\n"
@@ -93,7 +112,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-class-loading-configuration-class-loading-config.adoc:45
+#: upstream/_generated-config/main/config/quarkus-class-loading-configuration-class-loading-config.adoc:54
 #, no-wrap
 msgid "`Map<String,Set<String>>`"
 msgstr ""
