--- a/l10n/po/ja_JP/_versions/main/guides/kogito-drl.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kogito-drl.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-04 02:21+0000\n"
+"POT-Creation-Date: 2021-08-10 02:20+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -100,7 +100,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kogito-drl.adoc:43
-msgid "A business rule allows to externalise decision logic into reusable pieces that can be easily used in declarative way. There are multiple ways of writing rules like decision tables, decision trees, rules, etc. For this example we focus on the rule format backed by DRL (Drools Rule Language)."
+msgid "A business rule allows to externalise decision logic into reusable pieces that can be easily used in declarative way. There are multiple ways of writing rules like https://drools.org/learn/dmn.html[DMN models], decision tables, decision trees, rules, etc. For this example we focus on the rule format backed by DRL (Drools Rule Language)."
 msgstr ""
 
 #. type: Title ==
