Update .po files

--- a/l10n/po/ja_JP/_guides/datasource.adoc.po
+++ b/l10n/po/ja_JP/_guides/datasource.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-07-29 10:11+0000\n"
+"POT-Creation-Date: 2021-08-11 13:16+0000\n"
 "PO-Revision-Date: 2021-03-31 22:35+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -235,7 +235,9 @@ msgstr "リアクティブデータソース"
 
 #. type: Plain text
 #: upstream/_guides/datasource.adoc:104
-msgid "Add the correct reactive extension for the database you are using: `reactive-pg-client`, `reactive-mysql-client`, or `reactive-db2-client`."
+#, fuzzy
+#| msgid "Add the correct reactive extension for the database you are using: `reactive-pg-client`, `reactive-mysql-client`, or `reactive-db2-client`."
+msgid "Add the correct reactive extension for the database you are using: `reactive-pg-client`, `reactive-mssql-client`, `reactive-mysql-client`, or `reactive-db2-client`."
 msgstr "使用しているデータベースに適切なリアクティブ拡張を追加します。`reactive-pg-client` , `reactive-mysql-client`、または `reactive-db2-client`。"
 
 #. type: Plain text
