--- a/l10n/po/ja_JP/_guides/kogito-drl.adoc.po
+++ b/l10n/po/ja_JP/_guides/kogito-drl.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-04 13:18+0000\n"
+"POT-Creation-Date: 2021-08-11 13:16+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -112,7 +112,7 @@ msgstr "ビジネスルール"
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:43
 #, fuzzy
-msgid "A business rule allows to externalise decision logic into reusable pieces that can be easily used in declarative way. There are multiple ways of writing rules like decision tables, decision trees, rules, etc. For this example we focus on the rule format backed by DRL (Drools Rule Language)."
+msgid "A business rule allows to externalise decision logic into reusable pieces that can be easily used in declarative way. There are multiple ways of writing rules like https://drools.org/learn/dmn.html[DMN models], decision tables, decision trees, rules, etc. For this example we focus on the rule format backed by DRL (Drools Rule Language)."
 msgstr "ビジネスルールとは、意思決定ロジックを再利用可能なパーツに外部化し、宣言的な方法で簡単に使用できるようにするものです。ルールの書き方には、デシジョンテーブル、デシジョンツリー、ルールなど、さまざまな方法があります。この例では、DRL (Drools Rule Language)によるルール形式に注目します。"
 
 #. type: Title ==
