--- a/l10n/po/ja_JP/_guides/command-mode-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/command-mode-reference.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-07-29 10:11+0000\n"
+"POT-Creation-Date: 2021-08-11 13:15+0000\n"
 "PO-Revision-Date: 2021-03-06 23:39+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -245,7 +245,9 @@ msgstr "開発モード"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:118
-msgid "Also for command mode applications the dev mode is supported. When running `mvn compile quarkus:dev`, the command mode application is executed and on press of the Enter key, is restarted."
+#, fuzzy
+#| msgid "Also for command mode applications the dev mode is supported. When running `mvn compile quarkus:dev`, the command mode application is executed and on press of the Enter key, is restarted."
+msgid "Also for command mode applications the dev mode is supported. When running `mvn compile quarkus:dev`, the command mode application is executed and on press of the `Space bar` key, is restarted."
 msgstr "また、コマンドモードアプリケーションでは、開発モードにも対応しています。 `mvn compile quarkus:dev` を実行しているときは、コマンドモードアプリケーションを実行し、Enter キーを押すと再起動します。"
 
 #. type: Plain text
