Add machine translation

--- a/l10n/po/ja_JP/_guides/picocli.adoc.po
+++ b/l10n/po/ja_JP/_guides/picocli.adoc.po
@@ -564,14 +564,15 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/picocli.adoc:293
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Development Mode"
-msgstr ""
+msgstr "開発モード"
 
 #. type: Plain text
 #: upstream/_guides/picocli.adoc:296
+#, fuzzy
 msgid "In the development mode, i.e. when running `mvn quarkus:dev`, the application is executed and restarted every time the `Space bar` key is pressed. You can also pass arguments to your command line app via the `quarkus.args` system property, e.g. `mvn quarkus:dev -Dquarkus.args='--help'` and `mvn quarkus:dev -Dquarkus.args='-c -w --val 1'`."
-msgstr ""
+msgstr "開発モード、つまり `mvn quarkus:dev` を実行しているときは、 `Space bar` キーが押されるたびにアプリケーションが実行され、再起動されます。また、 `quarkus.args` システムプロパティを介して、コマンドラインアプリに引数を渡すことができます。例えば、 `mvn quarkus:dev -Dquarkus.args='--help'` と `mvn quarkus:dev -Dquarkus.args='-c -w --val 1'` 。"
 
 #. type: Title ==
 #: upstream/_guides/picocli.adoc:297
