--- a/l10n/po/ja_JP/_guides/reactive-sql-clients.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-sql-clients.adoc.po
@@ -58,8 +58,9 @@ msgstr "MariaDB/MySQL"
 
 #. type: Plain text
 #: upstream/_guides/reactive-sql-clients.adoc:18
+#, fuzzy
 msgid "Microsoft SQL Server"
-msgstr ""
+msgstr "Microsoft SQL Server"
 
 #. type: Plain text
 #: upstream/_guides/reactive-sql-clients.adoc:20
