Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/mailer-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/mailer-reference.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-14 02:17+0000\n"
+"POT-Creation-Date: 2021-08-13 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -22,7 +22,7 @@ msgstr ""
 #. type: Title =
 #: upstream/_versions/main/guides/mailer-reference.adoc:6
 #, no-wrap
-msgid "Quarkus Mailer Reference Guide"
+msgid "Mailer Reference Guide"
 msgstr ""
 
 #. type: Plain text
