--- a/l10n/po/ja_JP/_versions/main/guides/writing-extensions.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/writing-extensions.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-03 02:26+0000\n"
+"POT-Creation-Date: 2021-08-13 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2824,12 +2824,12 @@ msgstr ""
 #. type: Title ===
 #: upstream/_versions/main/guides/writing-extensions.adoc:1466
 #, no-wrap
-msgid "Quarkus DEV UI"
+msgid "Quarkus Dev UI"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/writing-extensions.adoc:1469
-msgid "You can make your extension support the link:dev-ui[Quarkus DEV UI] for a greater developer experience."
+msgid "You can make your extension support the link:dev-ui[Quarkus Dev UI] for a greater developer experience."
 msgstr ""
 
 #. type: Title ===
