Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-jackson-jackson-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-jackson-jackson-build-time-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-23 02:16+0000\n"
+"POT-Creation-Date: 2021-08-18 02:15+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -130,7 +130,25 @@ msgid "link:https://docs.oracle.com/javase/8/docs/api/java/time/ZoneId.html[Zone
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-jackson-jackson-build-time-config.adoc:57
+#: upstream/_generated-config/main/config/quarkus-jackson-jackson-build-time-config.adoc:58
 #, no-wrap
 msgid "`UTC`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-jackson-jackson-build-time-config.adoc:63
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-jackson-jackson-build-time-config_quarkus.jackson.serialization-inclusion]]`link:#quarkus-jackson-jackson-build-time-config_quarkus.jackson.serialization-inclusion[quarkus.jackson.serialization-inclusion]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Define which properties of Java Beans are to be included in serialization.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-jackson-jackson-build-time-config.adoc:64
+#, no-wrap
+msgid "`always`, `non-null`, `non-absent`, `non-empty`, `non-default`, `custom`, `use-defaults`"
 msgstr ""
