--- a/l10n/po/ja_JP/_versions/main/guides/building-native-image.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/building-native-image.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-31 02:21+0000\n"
+"POT-Creation-Date: 2021-08-18 02:16+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -887,13 +887,13 @@ msgstr "MavenでビルドするためのサンプルDockerfileです。"
 msgid ""
 "## Stage 1 : build with maven builder image with native capabilities\n"
 "FROM quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor} AS build\n"
-"COPY pom.xml /project/\n"
-"COPY mvnw /project/mvnw\n"
-"COPY .mvn /project/.mvn\n"
+"COPY pom.xml /code/\n"
+"COPY mvnw /code/mvnw\n"
+"COPY .mvn /code/.mvn\n"
 "USER quarkus\n"
-"WORKDIR /project\n"
+"WORKDIR /code\n"
 "RUN ./mvnw -B org.apache.maven.plugins:maven-dependency-plugin:3.1.2:go-offline\n"
-"COPY src /project/src\n"
+"COPY src /code/src\n"
 "RUN ./mvnw package -Pnative\n"
 msgstr ""
 
@@ -904,7 +904,7 @@ msgid ""
 "## Stage 2 : create the docker final image\n"
 "FROM registry.access.redhat.com/ubi8/ubi-minimal:8.4\n"
 "WORKDIR /work/\n"
-"COPY --from=build /project/target/*-runner /work/application\n"
+"COPY --from=build /code/target/*-runner /work/application\n"
 msgstr ""
 
 #. type: delimited block -
@@ -954,15 +954,15 @@ msgstr "GradleでビルドするためのサンプルDockerfileです。"
 msgid ""
 "## Stage 1 : build with maven builder image with native capabilities\n"
 "FROM quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor} AS build\n"
-"COPY gradlew /project/gradlew\n"
-"COPY gradle /project/gradle\n"
-"COPY build.gradle /project/\n"
-"COPY settings.gradle /project/\n"
-"COPY gradle.properties /project/\n"
+"COPY gradlew /code/gradlew\n"
+"COPY gradle /code/gradle\n"
+"COPY build.gradle /code/\n"
+"COPY settings.gradle /code/\n"
+"COPY gradle.properties /code/\n"
 "USER quarkus\n"
-"WORKDIR /project\n"
-"COPY src /project/src\n"
-"RUN gradle -b /project/build.gradle buildNative\n"
+"WORKDIR /code\n"
+"COPY src /code/src\n"
+"RUN gradle -b /code/build.gradle buildNative\n"
 msgstr ""
 
 #. type: delimited block -
@@ -972,7 +972,7 @@ msgid ""
 "## Stage 2 : create the docker final image\n"
 "FROM registry.access.redhat.com/ubi8/ubi-minimal\n"
 "WORKDIR /work/\n"
-"COPY --from=build /project/build/*-runner /work/application\n"
+"COPY --from=build /code/build/*-runner /work/application\n"
 "RUN chmod 775 /work\n"
 "EXPOSE 8080\n"
 "CMD [\"./application\", \"-Dquarkus.http.host=0.0.0.0\"]\n"
