--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-core.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-core.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-17 02:16+0000\n"
+"POT-Creation-Date: 2021-08-18 02:15+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -890,7 +890,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Additional arguments to pass to the build process\n"
+"Comma-separated, additional arguments to pass to the build process. If an argument includes the `,` symbol, it needs to be escaped, e.g. `++\\\\++,`\n"
 "--"
 msgstr ""
 
