--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-18 02:15+0000\n"
+"POT-Creation-Date: 2021-08-19 02:16+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -15447,7 +15447,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:8342
 #, no-wrap
-msgid "[[quarkus-datasource_quarkus-datasource-datasource-configuration]]link:#quarkus-datasource_quarkus-datasource-datasource-configuration[Datasource configuration]"
+msgid "[[quarkus-datasource_quarkus-datasource-datasources]]link:#quarkus-datasource_quarkus-datasource-datasources[Datasources]"
 msgstr ""
 
 #. type: Table
