--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-all-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-all-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-11 13:10+0000\n"
+"POT-Creation-Date: 2021-08-19 12:05+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -34540,7 +34540,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"If DevServices has been explicitly enabled or disabled.. \n"
+"If DevServices has been explicitly enabled or disabled. \n"
 " When DevServices is enabled Quarkus will attempt to automatically configure and start Keycloak when running in Dev or Test mode and when Docker is running.\n"
 "--"
 msgstr ""
@@ -38463,7 +38463,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Additional arguments to pass to the build process\n"
+"Comma-separated, additional arguments to pass to the build process. If an argument includes the `,` symbol, it needs to be escaped, e.g. `++\\\\++,`\n"
 "--"
 msgstr ""
 
