--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-keycloak-devservices-keycloak-keycloak-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-keycloak-devservices-keycloak-keycloak-build-time-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-29 10:06+0000\n"
+"POT-Creation-Date: 2021-08-19 12:05+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -47,7 +47,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"If DevServices has been explicitly enabled or disabled.. \n"
+"If DevServices has been explicitly enabled or disabled. \n"
 " When DevServices is enabled Quarkus will attempt to automatically configure and start Keycloak when running in Dev or Test mode and when Docker is running.\n"
 "--"
 msgstr ""
